...
}

@Composable
@Preview(showBackground = true)
private fun SingLineTextFieldPreview() {
    SingleLineTextField(
        placeHolder = "제목을 입력해주세요.",
        isError = false,
        supportingText = "제목을 입력해주세요.",
        value = "",
        onValueChange = { print(it) },
    )
}
...
