...
    const val TAG_SUPPORTING = "5자 이내에 태그를 최대 5개까지 등록할 수 있습니다."
    const val TAG_ERROR = "태그 형식이 올바르지 않습니다."
    const val ASSIGNEE_ERROR = "담당자를 지정해야 합니다."

    const val STATE_BUTTON_LABEL = "상태"
    const val STATE_BUTTON_TODO = "To Do"
    const val STATE_BUTTON_PROGRESS = "In Progress"
    const val STATE_BUTTON_REVIEW = "Review"
    const val STATE_BUTTON_DONE = "Done"
    const val ASSIGNEE_LABEL_BUTTON_LABEL = "담당자"
    const val NO_ASSIGNEE_BUTTON_LABEL = "없음"
    const val NO_ASSIGNEE_LABEL = "담당자 없음"
    const val CANCEL_BUTTON = "취소"
    const val CREATE_BUTTON = "생성"
    const val EDIT_BUTTON = "수정"
    const val DELETE_BUTTON = "삭제"

    const val SIDEBAR_HEADER_TITLE = "프로젝트"
    const val SIDEBAR_HEADER_SUBTITLE = "4주차 미션 보드"
    const val BOARD_HEADER_PROGRESS = "완료율:"
    const val BOARD_TASK_CREATE_BUTTON = "새 태스크 생성"
...
