...
    Column(modifier = modifier) {
        KanbanBoardHeader(
            progress = boardState.progress,
            doneTaskCount = boardState.getTasksByStatus(TaskStatus.DONE).size,
            totalTaskCount = boardState.totalTaskCount,
            onClick = { taskFormState.toggleDialog(true) },
            headerTitle = projectTitle,
        )
        Row(
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier.fillMaxWidth(1f),
        ) {
            selectedStatuses.forEach { status ->
...
