package woowacourse.kanban.board.ui

import androidx.compose.ui.test.ExperimentalTestApi
import androidx.compose.ui.test.assert
import androidx.compose.ui.test.assertCountEquals
import androidx.compose.ui.test.hasClickAction
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.onChildren
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.runComposeUiTest
import kotlin.test.Test
import woowacourse.kanban.board.KanbanPage
import woowacourse.kanban.board.components.KanbanSidebar
import woowacourse.kanban.board.constant.MockData
import woowacourse.kanban.board.constant.SnackBarText
import woowacourse.kanban.domain.project.KanbanProject
import woowacourse.kanban.domain.task.Assignee
import woowacourse.kanban.domain.task.KanbanTask
import woowacourse.kanban.domain.task.Tags
import woowacourse.kanban.domain.task.TaskData
import woowacourse.kanban.domain.task.TaskStatus
import woowacourse.kanban.domain.task.Title

@OptIn(ExperimentalTestApi::class)
class KanbanPageUiTest {

    @Test
    fun `프로젝트를 선택하면 프로젝트에 저장되어 있는 태스크들이 표시되어야 한다`() = runComposeUiTest {
        // given : 칸반 페이지가 생성된다.
        setContent {
            KanbanPage()
        }

        // when : 프로젝트 버튼을 눌렀을 때
        onNodeWithText("Compose2").performClick()
        waitForIdle()

        // then : 프로젝트에 저장되어 있는 태스크들이 표시되어야 한다
        onNodeWithTag("In Progress")
            .onChildren()
            .assertCountEquals(3)
    }

    @Test
    fun `프로젝트를 선택하면 보드의 제목이 변경되어야 한다`() = runComposeUiTest {
        // given : 칸반 페이지가 생성된다.
        setContent {
            KanbanPage()
        }

        // when : 가장 처음 프로젝트의 제목이 표시되고 다른 프로젝트 버튼을 눌렀을 때
        onNodeWithTag("headerTitle").assert(hasText("Compose1"))

        onNodeWithText("Compose2").performClick()
        waitForIdle()

        // then : 보드의 제목이 선택된 프로젝트의 이름으로 변경되어야 한다
        onNodeWithTag("headerTitle").assert(hasText("Compose2"))
    }

    @Test
    fun `사이드바에 프로젝트 리스트가 출력되어야 한다`() = runComposeUiTest {
        // given : 목 데이터가 주어진다
        val mock = MockData.MOCK_PROJECTS

        // when : 사이드바에 프로젝트 리스트가 표시될 때
        setContent {
            KanbanSidebar(
                projects = mock,
                onClick = { },
                selectedProjectIndex = 0,
            )
        }

        // then : 입력된 프로젝트들의 제목이 사이드바에 표시된다
        onNodeWithText("Compose1").assertExists()
        onNodeWithText("Compose2").assertExists()
        onNodeWithText("compose3 너무너무 길어진 프로젝트 이름").assertExists()
    }

    @Test
    fun `상태를 변경 했을 때 스낵바가 출력되어야 한다`() = runComposeUiTest {
        // given : snackBarHostState를 설정한 Scaffold와 BoardStateHolder, Mock 데이터가 주어진다.
        val project = listOf(
            KanbanProject(
                title = "Compose1",
                tasks = listOf(
                    KanbanTask(
                        data = TaskData(
                            title = Title("제목"),
                            content = "",
                            tags = Tags(),
                            assignee = Assignee.DINO,
                        ),
                        status = TaskStatus.TO_DO,
                    ),
                ),
            ),
        )

        setContent {
            KanbanPage(
                inputProjects = project,
            )
        }

        // when : 상태 변경 함수를 호출했을 때
        onNodeWithText("제목").performClick()
        waitForIdle()
        onNode(hasText("In Progress") and hasClickAction()).performClick()
        waitForIdle()
        onNodeWithText("수정").performClick()
        waitForIdle()

        // then : "태스크가 이동되었습니다" 스낵바가 출력되어야 한다.
        onNodeWithText(SnackBarText.EDIT_TASK, useUnmergedTree = true).assertExists()
    }
}
